@@ -11,6 +11,7 @@ Date: ????
     - Fix copy paste crash when source is unconfigured
     - Disable fluid support pending implementation concerns
     - Cache statistics
+    - Require factory planner version with quality buttons
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.9
 Date: 2025. 06. 12
